[0, 17, 20]: today
  - fix error in microseconds while rounding datetime fractions >= 9999995
    (reported by `Luis Ferreira <https://sourceforge.net/u/ljmf00/>`__)

[0, 17, 19]: 2021-12-26
  - fix mypy problems (reported by `Arun <https://sourceforge.net/u/arunppsg/profile/>`__)

[0, 17, 18]: 2021-12-24
  - copy-paste error in folded scalar comment attachment (reported by `Stephan Geulette
    <https://sourceforge.net/u/sgeulette/profile/>`__)
  - fix 411, indent error comment between key empty seq value (reported by `Guillermo Julián
    <https://sourceforge.net/u/gjulianm/profile/>`__)

[0, 17, 17]: 2021-10-31
  - extract timestamp matching/creation to util

[0, 17, 16]: 2021-08-28
  - also handle issue 397 when comment is newline

[0, 17, 15]: 2021-08-28
  - fix issue 397, insert comment before key when a comment between key and value exists
    (reported by `Bastien gerard <https://sourceforge.net/u/bagerard/>`__)

[0, 17, 14]: 2021-08-25
  - fix issue 396, inserting key/val in merged-in dictionary (reported by `Bastien gerard 
    <https://sourceforge.net/u/bagerard/>`__)

[0, 17, 13]: 2021-08-21
  - minor fix in attr handling

[0, 17, 12]: 2021-08-21
  - fix issue with anchor on registered class not preserved and those classes using package 
    attrs with `@attr.s()` (both reported by `ssph <https://sourceforge.net/u/sph/>`__)

[0, 17, 11]: 2021-08-19
  - fix error baseclass for ``DuplicateKeyErorr`` (reported by `Łukasz Rogalski
    <https://sourceforge.net/u/lrogalski/>`__)
  - fix typo in reader error message, causing `KeyError` during reader error 
    (reported by `MTU <https://sourceforge.net/u/mtu/>`__)

[0, 17, 10]: 2021-06-24
  - fix issue 388, token with old comment structure != two elements
    (reported by `Dimitrios Bariamis <https://sourceforge.net/u/dbdbc/>`__)

[0, 17, 9]: 2021-06-10
  - fix issue with updating CommentedMap (reported by sri on
    `StackOverlow <https://stackoverflow.com/q/67911659/1307905>`__)

[0, 17, 8]: 2021-06-09