@@ -5,9 +5,9 @@ if False:  # MYPY
 
 _package_data = dict(
     full_package_name='ruamel.yaml',
-    version_info=(0, 17, 20),
-    __version__='0.17.20',
-    version_timestamp='2022-01-03 09:19:48',
+    version_info=(0, 17, 21),
+    __version__='0.17.21',
+    version_timestamp='2022-02-12 09:49:22',
     author='Anthon van der Neut',
     author_email='a.van.der.neut@ruamel.eu',
     description='ruamel.yaml is a YAML parser/emitter that supports roundtrip preservation of comments, seq/map flow style, and map key order',  # NOQA
